Continue German man page translation, including new man pages

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 dpkg (1.14.19) UNRELEASED; urgency=low
 
-  *
+  [ Updated manpages translations ]
+  * German (Helge Kreutzmann).
 
  -- Guillem Jover <guillem@debian.org>  Tue, 08 Apr 2008 07:20:49 +0300
 
