--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,7 @@
+2008-04-08  Helge Kreutzmann  <debian@helgefjell.de>
+
+	* po/de.po: Updated to 1523t1f74u.
+
 2008-04-08  Guillem Jover  <guillem@debian.org>
 
 	* po/dpkg-man.pot: Regenerated.
