--- a/man/po/de.po
+++ b/man/po/de.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
 "POT-Creation-Date: 2008-04-08 06:42+0300\n"
-"PO-Revision-Date: 2008-04-07 22:37+0200\n"
+"PO-Revision-Date: 2008-04-08 22:17+0200\n"
 "Last-Translator: Helge Kreutzmann <debian@helgefjell.de>\n"
 "Language-Team: de <debian-l10n-german@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -2262,25 +2262,25 @@ msgstr "B<dpkg-shlibdeps>(1), B<dpkg-gensymbols>(1)."
 
 # type: TP
 #: ../../man/deb-triggers.5:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "deb-triggers"
-msgstr "deb-version"
+msgstr "deb-triggers"
 
 # type: TH
 #: ../../man/deb-triggers.5:1 ../../man/dpkg.1:1 ../../man/dpkg-trigger.1:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "2008-04-06"
-msgstr "2007-10-06"
+msgstr "2008-04-06"
 
 # type: Plain text
 #: ../../man/deb-triggers.5:4
 msgid "deb-triggers - package triggers"
-msgstr ""
+msgstr "deb-triggers - Paket-Trigger"
 
 # type: Plain text
 #: ../../man/deb-triggers.5:7
 msgid "triggers"
-msgstr ""
+msgstr "triggers"
 
 # type: Plain text
 #: ../../man/deb-triggers.5:12
@@ -2289,6 +2289,9 @@ msgid ""
 "I<triggers> file in its control archive (ie, I<DEBIAN/triggers> during "
 "package creation)."
 msgstr ""
+"Ein Paket erklärt seine Beziehung zu einigen Trigger(n) (deutsch: Auslösern) "
+"indem es eine Datei I<triggers> in seinem Steuerarchiv (d.h. I<DEBIAN/"
+"triggers>) während der Paketerstellung hinzunimmt."
 
 # type: Plain text
 #: ../../man/deb-triggers.5:16
@@ -2297,17 +2300,19 @@ msgid ""
 "and everything after the first B<#> on any line will be trimmer, and empty "
 "lines will be ignored."
 msgstr ""
+"Diese Datei enthält Direktiven, eine pro Zeile. Leerzeichen am Anfang und "
+"Ende sowie alles nach dem ersten B<#> werden in jeder Zeile entfernt und "
+"leere Zeilen werden ignoriert."
 
 # type: Plain text
 #: ../../man/deb-triggers.5:18
 msgid "The trigger control directives currently supported are:"
-msgstr ""
+msgstr "Die derzeit unterstützten Steuerdirektiven für Trigger sind:"
 
 # type: TP
 #: ../../man/deb-triggers.5:22
-#, fuzzy
 msgid "B<interest> I<trigger-name>"
-msgstr "B<-n>I<Dateiname>"
+msgstr "B<interest> I<Trigger-Name>"
 
 # type: Plain text
 #: ../../man/deb-triggers.5:27
@@ -2316,11 +2321,14 @@ msgid ""
 "in which a package is interested must be listed using this directive in the "
 "triggers control file."
 msgstr ""
+"Gibt an, dass das Paket an dem benannten Trigger interessiert ist. Alle "
+"Trigger, an denen ein Paket interessiert ist, müssen mit dieser Direktive in "
+"der Trigger-Steuerdatei aufgeführt werden."
 
 # type: Plain text
 #: ../../man/deb-triggers.5:31
 msgid "B<activate> I<trigger-name>"
-msgstr ""
+msgstr "B<activate> I<Trigger-Name>"
 
 # type: Plain text
 #: ../../man/deb-triggers.5:37
@@ -2347,12 +2355,13 @@ msgid ""
 "Unknown directives are an error which will prevent installation of the "
 "package."
 msgstr ""
+"Unbekannte Direktiven sind ein Fehler, der die Installation eines Pakets "
+"verhindert."
 
 # type: Plain text
 #: ../../man/deb-triggers.5:51
-#, fuzzy
 msgid "B<dpkg-trigger>(1), B<dpkg>(1)."
-msgstr "B<dpkg-buildpackage>(1), B<dpkg-cross>(1)."
+msgstr "B<dpkg-trigger>(1), B<dpkg>(1)."
 
 # type: TH
 #: ../../man/dpkg.1:1
@@ -2554,7 +2563,7 @@ msgstr ""
 #: ../../man/dpkg.1:66
 #, no-wrap
 msgid "B<triggers-awaited>"
-msgstr ""
+msgstr "B<triggers-awaited>"
 
 # type: Plain text
 #: ../../man/dpkg.1:69
@@ -2565,13 +2574,12 @@ msgstr ""
 #: ../../man/dpkg.1:69
 #, no-wrap
 msgid "B<triggers-pending>"
-msgstr ""
+msgstr "B<triggers-pending>"
 
 # type: Plain text
 #: ../../man/dpkg.1:72
-#, fuzzy
 msgid "The package has been triggered."
-msgstr "Das Paket ist entpackt und konfigurierte korrekt."
+msgstr "Das Paket wurde getriggert."
 
 # type: TP
 #: ../../man/dpkg.1:72
@@ -2805,9 +2813,9 @@ msgstr ""
 
 # type: TP
 #: ../../man/dpkg.1:150
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "B<--triggers-only> I<package>...|B<-a>|B<--pending>"
-msgstr "B<--configure >I<Paket> ...|B<-a>|B<--pending>"
+msgstr "B<--triggers-only> I<Paket>...|B<-a>|B<--pending>"
 
 # type: Plain text
 #: ../../man/dpkg.1:157
@@ -3849,9 +3857,9 @@ msgstr "Versuche nicht, Paketsignaturen zu überprüfen."
 
 # type: TP
 #: ../../man/dpkg.1:535
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "B<--no-triggers>"
-msgstr "B<--no-debsig>"
+msgstr "B<--no-triggers>"
 
 # type: Plain text
 #: ../../man/dpkg.1:544
@@ -3866,9 +3874,9 @@ msgstr ""
 
 # type: TP
 #: ../../man/dpkg.1:544
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "B<--triggers>"
-msgstr "B<--test>"
+msgstr "B<--triggers>"
 
 # type: Plain text
 #: ../../man/dpkg.1:547
@@ -9938,9 +9946,9 @@ msgstr ""
 
 # type: TP
 #: ../../man/dpkg-source.1:409
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "B<--no-preparation>"
-msgstr "B<--version>"
+msgstr "B<--no-preparation>"
 
 # type: Plain text
 #: ../../man/dpkg-source.1:413
@@ -9956,14 +9964,14 @@ msgstr "B<Extrahierungs-Optionen>"
 
 # type: TP
 #: ../../man/dpkg-source.1:415
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "B<--skip-patches>"
-msgstr "B<--update>"
+msgstr "B<--skip-patches>"
 
 # type: Plain text
 #: ../../man/dpkg-source.1:418
 msgid "Do not apply patches at the end of the extraction."
-msgstr ""
+msgstr "Wende am Ende der Extrahierung keine Patches an."
 
 # type: TP
 #: ../../man/dpkg-source.1:418
@@ -10730,26 +10738,24 @@ msgstr ""
 
 # type: TH
 #: ../../man/dpkg-trigger.1:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "dpkg-trigger"
-msgstr "dpkg-divert"
+msgstr "dpkg-trigger"
 
 # type: Plain text
 #: ../../man/dpkg-trigger.1:4
 msgid "dpkg-trigger - a package trigger utility"
-msgstr ""
+msgstr "dpkg-trigger - ein Paket-Trigger-Hilfswerkzeug"
 
 # type: Plain text
 #: ../../man/dpkg-trigger.1:8
-#, fuzzy
 msgid "B<dpkg-trigger> [I<option>...] I<trigger-name>"
-msgstr "B<dpkg-query> [I<Option>...] I<Befehl>"
+msgstr "B<dpkg-trigger> [I<Option>...] I<Trigger-Name>"
 
 # type: Plain text
 #: ../../man/dpkg-trigger.1:11
-#, fuzzy
 msgid "B<dpkg-trigger> [I<option>...] I<command>"
-msgstr "B<dpkg-query> [I<Option>...] I<Befehl>"
+msgstr "B<dpkg-trigger> [I<Option>...] I<Befehl>"
 
 # type: Plain text
 #: ../../man/dpkg-trigger.1:15
@@ -10757,6 +10763,9 @@ msgid ""
 "B<dpkg-trigger> is a tool to explicitely activate triggers and check for its "
 "support on the running B<dpkg>."
 msgstr ""
+"B<dpkg-trigger> ist ein Werkzeug, um Trigger (deutsch: Auslöser) explizit "
+"zu aktivieren und den laufenden B<dpkg> auf deren Unterstützung hin zu "
+"überprüfen."
 
 # type: Plain text
 #: ../../man/dpkg-trigger.1:21
@@ -10775,9 +10784,9 @@ msgstr ""
 
 # type: TP
 #: ../../man/dpkg-trigger.1:25
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "B<--check-supported>"
-msgstr "B<--nocheck>"
+msgstr "B<--check-supported>"
 
 # type: Plain text
 #: ../../man/dpkg-trigger.1:31
@@ -10790,9 +10799,9 @@ msgstr ""
 
 # type: TP
 #: ../../man/dpkg-trigger.1:46
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "B<--by-package=>I<package>"
-msgstr "B<--package>I< Paket>"
+msgstr "B<--by-package=>I<Paket>"
 
 # type: Plain text
 #: ../../man/dpkg-trigger.1:52
@@ -10805,9 +10814,9 @@ msgstr ""
 
 # type: TP
 #: ../../man/dpkg-trigger.1:52
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "B<--no-await>"
-msgstr "B<--no-debsig>"
+msgstr "B<--no-await>"
 
 # type: Plain text
 #: ../../man/dpkg-trigger.1:59
@@ -10820,20 +10829,19 @@ msgstr ""
 
 # type: TP
 #: ../../man/dpkg-trigger.1:59
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "B<--no-act>"
-msgstr "B<--no-copy>"
+msgstr "B<--no-act>"
 
 # type: Plain text
 #: ../../man/dpkg-trigger.1:62
 msgid "Just test, do not actually change anything."
-msgstr ""
+msgstr "Nur testen, nichts tatsächlich ändern."
 
 # type: Plain text
 #: ../../man/dpkg-trigger.1:65
-#, fuzzy
 msgid "B<dpkg>(1), B<deb-triggers>(5)."
-msgstr "B<dpkg-shlibdeps>(1), B<deb-symbols>(5)."
+msgstr "B<dpkg>(1), B<deb-triggers>(5)."
 
 # type: TH
 #: ../../man/dselect.1:1
@@ -11504,6 +11512,12 @@ msgid ""
 "currently selected in the top half of the screen.  The type of detail that "
 "is displayed can be varied."
 msgstr ""
+"Der Auswahlbildschirm ist standardmäßig in eine obere und eine untere Hälfte "
+"geteilt. Die obere Hälft zeigt eine Liste von Paketen. Ein Cursorbalken wählt "
+"individuelle Pakete oder, falls zutreffend, eine Gruppe von Paketen durch "
+"Auswahl der Gruppenkopfzeile aus. Die unter Hälfte des Bildschirms zeigt "
+"einige Details über das derzeit in der oberen Hälfte des Bildschirms "
+"ausgewählte Paket an. Die Art der angezeigten Details kann variiert werden."
 
 # type: Plain text
 #: ../../man/dselect.1:252
