--- a/man/deb-triggers.5
+++ b/man/deb-triggers.5
@@ -1,4 +1,4 @@
-.TH deb\-triggers 5 "2008-04-06" "Debian Project" "dpkg utilities"
+.TH deb\-triggers 5 "2008-04-09" "Debian Project" "dpkg utilities"
 .SH NAME
 deb\-triggers \- package triggers
 .
@@ -7,11 +7,11 @@ triggers
 .
 .SH DESCRIPTION
 A package declares its relationship to some trigger(s) by including
-a \fItriggers\fP file in its control archive (ie, \fIDEBIAN/triggers\fP
+a \fItriggers\fP file in its control archive (i.e. \fIDEBIAN/triggers\fP
 during package creation).
 .PP
-This file contains directives, one per line. Leading and trailing whitspace
-and everything after the first \fB#\fP on any line will be trimmer, and
+This file contains directives, one per line. Leading and trailing whitespace
+and everything after the first \fB#\fP on any line will be trimmed, and
 empty lines will be ignored.
 .PP
 The trigger control directives currently supported are:
@@ -21,9 +21,9 @@ The trigger control directives currently supported are:
 .I trigger-name
 .PP
 .in +5
-Specifies that the package is interested in the named trigger.
-All triggers in which a package is interested must be listed using
-this directive in the triggers control file.
+Specifies that the package is interested in the named trigger. All
+triggers in which a package is interested must be listed using this
+directive in the triggers control file.
 .PP
 .in +5
 .B activate
