--- a/man/dpkg-trigger.1
+++ b/man/dpkg-trigger.1
@@ -1,4 +1,4 @@
-.TH dpkg\-trigger 1 "2008-04-06" "Debian Project" "dpkg suite"
+.TH dpkg\-trigger 1 "2008-04-08" "Debian Project" "dpkg suite"
 .SH NAME
 dpkg\-trigger \- a package trigger utility
 .
@@ -19,7 +19,7 @@ triggers control file directive, are insufficiently rich. It can also
 be used for testing and by system administrators (but note that the
 triggers won't actually be run by dpkg-trigger).
 .PP
-Unrecognised trigger name syntaxes are an error for dpkg-trigger.:
+Unrecognised trigger name syntaxes are an error for dpkg-trigger.
 .
 .SH COMMANDS
 .TP
