man/po: Regenerate .pot file and merge .po files with it

--- a/man/po/dpkg-man.pot
+++ b/man/po/dpkg-man.pot
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2008-04-08 06:42+0300\n"
+"POT-Creation-Date: 2008-04-09 07:13+0300\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -1678,9 +1678,9 @@ msgid "deb-triggers"
 msgstr ""
 
 # type: TH
-#: ../../man/deb-triggers.5:1 ../../man/dpkg.1:1 ../../man/dpkg-trigger.1:1
+#: ../../man/deb-triggers.5:1
 #, no-wrap
-msgid "2008-04-06"
+msgid "2008-04-09"
 msgstr ""
 
 # type: Plain text
@@ -1697,15 +1697,15 @@ msgstr ""
 #: ../../man/deb-triggers.5:12
 msgid ""
 "A package declares its relationship to some trigger(s) by including a "
-"I<triggers> file in its control archive (ie, I<DEBIAN/triggers> during "
+"I<triggers> file in its control archive (i.e. I<DEBIAN/triggers> during "
 "package creation)."
 msgstr ""
 
 # type: Plain text
 #: ../../man/deb-triggers.5:16
 msgid ""
-"This file contains directives, one per line. Leading and trailing whitspace "
-"and everything after the first B<#> on any line will be trimmer, and empty "
+"This file contains directives, one per line. Leading and trailing whitespace "
+"and everything after the first B<#> on any line will be trimmed, and empty "
 "lines will be ignored."
 msgstr ""
 
@@ -1722,7 +1722,7 @@ msgstr ""
 # type: Plain text
 #: ../../man/deb-triggers.5:27
 msgid ""
-"Specifies that the package is interested in the named trigger.  All triggers "
+"Specifies that the package is interested in the named trigger. All triggers "
 "in which a package is interested must be listed using this directive in the "
 "triggers control file."
 msgstr ""
@@ -1767,6 +1767,12 @@ msgstr ""
 #: ../../man/dpkg.1:1
 #, no-wrap
 msgid "dpkg"
+msgstr ""
+
+# type: TH
+#: ../../man/dpkg.1:1
+#, no-wrap
+msgid "2008-04-06"
 msgstr ""
 
 # type: TH
@@ -8593,6 +8599,12 @@ msgstr ""
 msgid "dpkg-trigger"
 msgstr ""
 
+# type: TH
+#: ../../man/dpkg-trigger.1:1
+#, no-wrap
+msgid "2008-04-08"
+msgstr ""
+
 # type: Plain text
 #: ../../man/dpkg-trigger.1:4
 msgid "dpkg-trigger - a package trigger utility"
@@ -8627,7 +8639,7 @@ msgstr ""
 
 # type: Plain text
 #: ../../man/dpkg-trigger.1:23
-msgid "Unrecognised trigger name syntaxes are an error for dpkg-trigger.:"
+msgid "Unrecognised trigger name syntaxes are an error for dpkg-trigger."
 msgstr ""
 
 # type: TP
