--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,8 @@
+2008-04-09  Guillem Jover  <guillem@debian.org>
+
+	* po/dpkg-man.pot: Regenerated.
+	* po/*.po: Merged with dpkg-man.pot.
+
 2008-04-09  Helge Kreutzmann  <debian@helgefjell.de>
 
 	* deb-triggers.5: Fix typos.
