--- a/man/po/fr.po
+++ b/man/po/fr.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
-"POT-Creation-Date: 2008-04-08 06:42+0300\n"
+"POT-Creation-Date: 2008-04-09 07:13+0300\n"
 "PO-Revision-Date: 2007-05-17 03:10+0200\n"
 "Last-Translator: Nicolas François <nicolas.francois@centraliens.net>\n"
 "Language-Team: French <debian-l10n-french@lists.debian.org>\n"
@@ -2182,9 +2182,9 @@ msgid "deb-triggers"
 msgstr "deb-version"
 
 # type: TH
-#: ../../man/deb-triggers.5:1 ../../man/dpkg.1:1 ../../man/dpkg-trigger.1:1
+#: ../../man/deb-triggers.5:1
 #, fuzzy, no-wrap
-msgid "2008-04-06"
+msgid "2008-04-09"
 msgstr "06-10-2007"
 
 # type: Plain text
@@ -2201,15 +2201,15 @@ msgstr ""
 #: ../../man/deb-triggers.5:12
 msgid ""
 "A package declares its relationship to some trigger(s) by including a "
-"I<triggers> file in its control archive (ie, I<DEBIAN/triggers> during "
+"I<triggers> file in its control archive (i.e. I<DEBIAN/triggers> during "
 "package creation)."
 msgstr ""
 
 # type: Plain text
 #: ../../man/deb-triggers.5:16
 msgid ""
-"This file contains directives, one per line. Leading and trailing whitspace "
-"and everything after the first B<#> on any line will be trimmer, and empty "
+"This file contains directives, one per line. Leading and trailing whitespace "
+"and everything after the first B<#> on any line will be trimmed, and empty "
 "lines will be ignored."
 msgstr ""
 
@@ -2227,7 +2227,7 @@ msgstr "B<-n>I<nom-de-fichier>"
 # type: Plain text
 #: ../../man/deb-triggers.5:27
 msgid ""
-"Specifies that the package is interested in the named trigger.  All triggers "
+"Specifies that the package is interested in the named trigger. All triggers "
 "in which a package is interested must be listed using this directive in the "
 "triggers control file."
 msgstr ""
@@ -2274,6 +2274,12 @@ msgstr "B<dpkg-buildpackage>(1), B<dpkg-cross>(1)."
 #, no-wrap
 msgid "dpkg"
 msgstr "dpkg"
+
+# type: TH
+#: ../../man/dpkg.1:1
+#, fuzzy, no-wrap
+msgid "2008-04-06"
+msgstr "06-10-2007"
 
 # type: TH
 #: ../../man/dpkg.1:1 ../../man/dpkg.cfg.5:1 ../../man/dpkg-deb.1:1
@@ -10421,6 +10427,12 @@ msgstr ""
 msgid "dpkg-trigger"
 msgstr "dpkg-divert"
 
+# type: TH
+#: ../../man/dpkg-trigger.1:1
+#, fuzzy, no-wrap
+msgid "2008-04-08"
+msgstr "06-10-2007"
+
 # type: Plain text
 #: ../../man/dpkg-trigger.1:4
 msgid "dpkg-trigger - a package trigger utility"
@@ -10457,7 +10469,7 @@ msgstr ""
 
 # type: Plain text
 #: ../../man/dpkg-trigger.1:23
-msgid "Unrecognised trigger name syntaxes are an error for dpkg-trigger.:"
+msgid "Unrecognised trigger name syntaxes are an error for dpkg-trigger."
 msgstr ""
 
 # type: TP
