--- a/man/po/ja.po
+++ b/man/po/ja.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
-"POT-Creation-Date: 2008-04-08 06:42+0300\n"
+"POT-Creation-Date: 2008-04-09 07:13+0300\n"
 "PO-Revision-Date: 2006-09-19 20:31+0900\n"
 "Last-Translator: KISE Hiroshi <kise@fuyuneko.jp>\n"
 "Language-Team: Debian Japanese List <debian-japanese@lists.debian.org>\n"
@@ -2086,9 +2086,9 @@ msgid "deb-triggers"
 msgstr "B<--version>"
 
 # type: TH
-#: ../../man/deb-triggers.5:1 ../../man/dpkg.1:1 ../../man/dpkg-trigger.1:1
+#: ../../man/deb-triggers.5:1
 #, fuzzy, no-wrap
-msgid "2008-04-06"
+msgid "2008-04-09"
 msgstr "2006-02-28"
 
 # type: Plain text
@@ -2105,15 +2105,15 @@ msgstr ""
 #: ../../man/deb-triggers.5:12
 msgid ""
 "A package declares its relationship to some trigger(s) by including a "
-"I<triggers> file in its control archive (ie, I<DEBIAN/triggers> during "
+"I<triggers> file in its control archive (i.e. I<DEBIAN/triggers> during "
 "package creation)."
 msgstr ""
 
 # type: Plain text
 #: ../../man/deb-triggers.5:16
 msgid ""
-"This file contains directives, one per line. Leading and trailing whitspace "
-"and everything after the first B<#> on any line will be trimmer, and empty "
+"This file contains directives, one per line. Leading and trailing whitespace "
+"and everything after the first B<#> on any line will be trimmed, and empty "
 "lines will be ignored."
 msgstr ""
 
@@ -2131,7 +2131,7 @@ msgstr "B<[--] >I<filename>"
 # type: Plain text
 #: ../../man/deb-triggers.5:27
 msgid ""
-"Specifies that the package is interested in the named trigger.  All triggers "
+"Specifies that the package is interested in the named trigger. All triggers "
 "in which a package is interested must be listed using this directive in the "
 "triggers control file."
 msgstr ""
@@ -2178,6 +2178,12 @@ msgstr "B<deb>(5), B<dpkg>(1), B<dpkg-deb>(1)."
 #, no-wrap
 msgid "dpkg"
 msgstr "dpkg"
+
+# type: TH
+#: ../../man/dpkg.1:1
+#, fuzzy, no-wrap
+msgid "2008-04-06"
+msgstr "2006-02-28"
 
 # type: TH
 #: ../../man/dpkg.1:1 ../../man/dpkg.cfg.5:1 ../../man/dpkg-deb.1:1
@@ -9684,6 +9690,12 @@ msgstr ""
 msgid "dpkg-trigger"
 msgstr "dpkg-divert"
 
+# type: TH
+#: ../../man/dpkg-trigger.1:1
+#, fuzzy, no-wrap
+msgid "2008-04-08"
+msgstr "2006-02-28"
+
 # type: Plain text
 #: ../../man/dpkg-trigger.1:4
 msgid "dpkg-trigger - a package trigger utility"
@@ -9720,7 +9732,7 @@ msgstr ""
 
 # type: Plain text
 #: ../../man/dpkg-trigger.1:23
-msgid "Unrecognised trigger name syntaxes are an error for dpkg-trigger.:"
+msgid "Unrecognised trigger name syntaxes are an error for dpkg-trigger."
 msgstr ""
 
 # type: TP
