--- a/man/po/pl.po
+++ b/man/po/pl.po
@@ -4,7 +4,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: dpkg 1.14.17\n"
-"POT-Creation-Date: 2008-04-08 06:42+0300\n"
+"POT-Creation-Date: 2008-04-09 07:13+0300\n"
 "PO-Revision-Date: 2008-03-09 16:38+0100\n"
 "Last-Translator: Robert Luberda <robert@debian.org>\n"
 "Language-Team: Polish <debian-l10n-polish@lists.debian.org>\n"
@@ -2192,9 +2192,9 @@ msgid "deb-triggers"
 msgstr "B<--version>"
 
 # type: TH
-#: ../../man/deb-triggers.5:1 ../../man/dpkg.1:1 ../../man/dpkg-trigger.1:1
+#: ../../man/deb-triggers.5:1
 #, fuzzy, no-wrap
-msgid "2008-04-06"
+msgid "2008-04-09"
 msgstr "2007-10-08"
 
 # type: Plain text
@@ -2211,15 +2211,15 @@ msgstr ""
 #: ../../man/deb-triggers.5:12
 msgid ""
 "A package declares its relationship to some trigger(s) by including a "
-"I<triggers> file in its control archive (ie, I<DEBIAN/triggers> during "
+"I<triggers> file in its control archive (i.e. I<DEBIAN/triggers> during "
 "package creation)."
 msgstr ""
 
 # type: Plain text
 #: ../../man/deb-triggers.5:16
 msgid ""
-"This file contains directives, one per line. Leading and trailing whitspace "
-"and everything after the first B<#> on any line will be trimmer, and empty "
+"This file contains directives, one per line. Leading and trailing whitespace "
+"and everything after the first B<#> on any line will be trimmed, and empty "
 "lines will be ignored."
 msgstr ""
 
@@ -2237,7 +2237,7 @@ msgstr "B<-n>I<nazwa_pliku>"
 # type: Plain text
 #: ../../man/deb-triggers.5:27
 msgid ""
-"Specifies that the package is interested in the named trigger.  All triggers "
+"Specifies that the package is interested in the named trigger. All triggers "
 "in which a package is interested must be listed using this directive in the "
 "triggers control file."
 msgstr ""
@@ -2284,6 +2284,12 @@ msgstr "B<dpkg-buildpackage>(1), B<dpkg-cross>(1)."
 #, no-wrap
 msgid "dpkg"
 msgstr "dpkg"
+
+# type: TH
+#: ../../man/dpkg.1:1
+#, fuzzy, no-wrap
+msgid "2008-04-06"
+msgstr "2007-10-08"
 
 # type: TH
 #: ../../man/dpkg.1:1 ../../man/dpkg.cfg.5:1 ../../man/dpkg-deb.1:1
@@ -10493,6 +10499,12 @@ msgstr ""
 msgid "dpkg-trigger"
 msgstr "dpkg-divert"
 
+# type: TH
+#: ../../man/dpkg-trigger.1:1
+#, fuzzy, no-wrap
+msgid "2008-04-08"
+msgstr "2007-10-08"
+
 # type: Plain text
 #: ../../man/dpkg-trigger.1:4
 msgid "dpkg-trigger - a package trigger utility"
@@ -10531,7 +10543,7 @@ msgstr ""
 
 # type: Plain text
 #: ../../man/dpkg-trigger.1:23
-msgid "Unrecognised trigger name syntaxes are an error for dpkg-trigger.:"
+msgid "Unrecognised trigger name syntaxes are an error for dpkg-trigger."
 msgstr ""
 
 # type: TP
