--- a/man/po/pt_BR.po
+++ b/man/po/pt_BR.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
-"POT-Creation-Date: 2008-04-08 06:42+0300\n"
+"POT-Creation-Date: 2008-04-09 07:13+0300\n"
 "PO-Revision-Date: 2005-07-03 15:04+0200\n"
 "Last-Translator: Unknown translator\n"
 "Language-Team: Portuguese <debian-l10n-portuguese@lists.debian.org>\n"
@@ -1873,9 +1873,9 @@ msgid "deb-triggers"
 msgstr "B<--version>"
 
 # type: TH
-#: ../../man/deb-triggers.5:1 ../../man/dpkg.1:1 ../../man/dpkg-trigger.1:1
+#: ../../man/deb-triggers.5:1
 #, fuzzy, no-wrap
-msgid "2008-04-06"
+msgid "2008-04-09"
 msgstr "2006-04-09"
 
 # type: Plain text
@@ -1892,15 +1892,15 @@ msgstr ""
 #: ../../man/deb-triggers.5:12
 msgid ""
 "A package declares its relationship to some trigger(s) by including a "
-"I<triggers> file in its control archive (ie, I<DEBIAN/triggers> during "
+"I<triggers> file in its control archive (i.e. I<DEBIAN/triggers> during "
 "package creation)."
 msgstr ""
 
 # type: Plain text
 #: ../../man/deb-triggers.5:16
 msgid ""
-"This file contains directives, one per line. Leading and trailing whitspace "
-"and everything after the first B<#> on any line will be trimmer, and empty "
+"This file contains directives, one per line. Leading and trailing whitespace "
+"and everything after the first B<#> on any line will be trimmed, and empty "
 "lines will be ignored."
 msgstr ""
 
@@ -1918,7 +1918,7 @@ msgstr "B<--log=>I<filename>"
 # type: Plain text
 #: ../../man/deb-triggers.5:27
 msgid ""
-"Specifies that the package is interested in the named trigger.  All triggers "
+"Specifies that the package is interested in the named trigger. All triggers "
 "in which a package is interested must be listed using this directive in the "
 "triggers control file."
 msgstr ""
@@ -1965,6 +1965,12 @@ msgstr "B<dpkg-deb-actions>"
 #, no-wrap
 msgid "dpkg"
 msgstr "dpkg"
+
+# type: TH
+#: ../../man/dpkg.1:1
+#, fuzzy, no-wrap
+msgid "2008-04-06"
+msgstr "2006-04-09"
 
 # type: TH
 #: ../../man/dpkg.1:1 ../../man/dpkg.cfg.5:1 ../../man/dpkg-deb.1:1
@@ -9170,6 +9176,12 @@ msgstr ""
 msgid "dpkg-trigger"
 msgstr "B<dpkg-query-actions>"
 
+# type: TH
+#: ../../man/dpkg-trigger.1:1
+#, fuzzy, no-wrap
+msgid "2008-04-08"
+msgstr "2006-04-09"
+
 # type: Plain text
 #: ../../man/dpkg-trigger.1:4
 msgid "dpkg-trigger - a package trigger utility"
@@ -9206,7 +9218,7 @@ msgstr ""
 
 # type: Plain text
 #: ../../man/dpkg-trigger.1:23
-msgid "Unrecognised trigger name syntaxes are an error for dpkg-trigger.:"
+msgid "Unrecognised trigger name syntaxes are an error for dpkg-trigger."
 msgstr ""
 
 # type: TP
