Updated Swedish translation.
Translated the new string in scripts/po/sv.po and fixed a typo.

--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,9 @@ dpkg (1.14.19) UNRELEASED; urgency=low
   [ Updated manpages translations ]
   * German (Helge Kreutzmann).
 
+  [ Updated scripts translations ]
+  * Swedish (Peter Karlsson).
+
  -- Guillem Jover <guillem@debian.org>  Tue, 08 Apr 2008 07:20:49 +0300
 
 dpkg (1.14.18) unstable; urgency=low
