--- a/scripts/po/sv.po
+++ b/scripts/po/sv.po
@@ -7,13 +7,13 @@ msgstr ""
 "Project-Id-Version: dpkg 1.14.15\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2008-04-08 07:01+0300\n"
-"PO-Revision-Date: 2008-04-03 13:13+0100\n"
+"PO-Revision-Date: 2008-04-09 18:08+0100\n"
 "Last-Translator: Peter Karlsson <peterk@debian.org>\n"
 "Language-Team: Swedish <debian-l10n-swedish@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=n!=1;\n"
+"Plural-Forms: nplurals=2; plural=n!=1;"
 
 #: scripts/822-date.pl:12
 msgid "Usage: 822-date"
@@ -275,7 +275,7 @@ msgid ""
 "fakeroot not found, either install the fakeroot\n"
 "package, specify a command with the -r option, or run this as root"
 msgstr ""
-"fakroot hittades inte, du kan installera paketet fakeroot,\n"
+"fakeroot hittades inte, du kan installera paketet fakeroot,\n"
 "ange ett kommando med flaggan -r, eller köra som root"
 
 #: scripts/dpkg-buildpackage.pl:219
@@ -2800,6 +2800,8 @@ msgid ""
 "patches have not been applied, applying them now (use --no-preparation to "
 "override)"
 msgstr ""
+"patcharna har inte tillämpats, tillämpar dem nu (använd -no-preparation "
+"för att överstyra)"
 
 #: scripts/Dpkg/Source/Package/V2_0.pm:224
 #: scripts/Dpkg/Source/Package/V3_0/bzr.pm:95
