Update German dpkg translation

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,8 @@
 dpkg (1.14.19) UNRELEASED; urgency=low
 
+  [ Updated dpkg translations ]
+  * German (Sven Joachim).
+
   [ Updated manpages translations ]
   * German (Helge Kreutzmann).
 
