--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-04-09  Sven Joachim  <svenjoac@gmx.de>
+
+	* de.po: Updated to 984t.
+
 2008-04-08  Guillem Jover  <guillem@debian.org>
 
 	* pt.po, sv.po: Merged with dpkg.pot.
