Fix my e-mail address

--- a/THANKS
+++ b/THANKS
@@ -152,7 +152,7 @@ Stefano Canepa <sc@linux.it>
 Stepan Golosunov <stepan@golosunov.pp.ru>
 Stephane Bortzmeyer <stephane@sources.org>
 Steve Langasek <vorlon@debian.org>
-Sven Joachim <sven_joachim@web.de>
+Sven Joachim <svenjoac@gmx.de>
 Sven Rudolph <sr1@loom.sax.de>
 Thomas Morin <thomas.morin@enst-bretagne.fr>
 Tom Lees <tom@lpsg.demon.co.uk>
