--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-04-09  Sven Joachim  <svenjoac@gmx.de>
+
+	* THANKS: Update my e-mail address.
+
 2008-04-08  Guillem Jover  <guillem@debian.org>
 
 	* configure.ac: Bump version to 1.14.19~.
