Fix another typo
Fix typo in src/trigcmd.c (dpkg-triggers -> dpkg-trigger).
Update all translations accordingly.
Fix misalignment in German dpkg translation.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-04-10  Sven Joachim  <svenjoac@gmx.de>
+
+	* src/trigcmd.c: Fix typo.
+
 2008-04-09  Sven Joachim  <svenjoac@gmx.de>
 
 	* THANKS: Update my e-mail address.
