--- a/po/ca.po
+++ b/po/ca.po
@@ -3662,7 +3662,7 @@ msgstr "--clear-selections no accepta cap argument"
 
 #: src/trigcmd.c:67
 #, fuzzy
-msgid "Type dpkg-triggers --help for help about this utility."
+msgid "Type dpkg-trigger --help for help about this utility."
 msgstr "Escriu dpkg-split --help per a obtindre ajuda."
 
 #: src/trigcmd.c:72
