--- a/po/cs.po
+++ b/po/cs.po
@@ -3537,7 +3537,7 @@ msgstr "--clear-selections musí být zadán bez argumentu"
 
 #: src/trigcmd.c:67
 #, fuzzy
-msgid "Type dpkg-triggers --help for help about this utility."
+msgid "Type dpkg-trigger --help for help about this utility."
 msgstr "Napište dpkg-split --help pro získání nápovědy."
 
 #: src/trigcmd.c:72
