--- a/po/de.po
+++ b/po/de.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: Debian dpkg 1.14.18\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2008-04-01 07:21+0300\n"
-"PO-Revision-Date: 2008-04-09 19:06+0200\n"
+"PO-Revision-Date: 2008-04-10 16:14+0200\n"
 "Last-Translator: Sven Joachim <svenjoac@gmx.de>\n"
 "Language-Team: German <debian-l10n-german@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -3631,8 +3631,8 @@ msgid "--clear-selections does not take any argument"
 msgstr "--clear-selections akzeptiert keine Argumente"
 
 #: src/trigcmd.c:67
-msgid "Type dpkg-triggers --help for help about this utility."
-msgstr "Geben Sie dpkg-triggers --help für Hilfe zu diesem Hilfsprogramm ein."
+msgid "Type dpkg-trigger --help for help about this utility."
+msgstr "Geben Sie dpkg-trigger --help für Hilfe zu diesem Hilfsprogramm ein."
 
 #: src/trigcmd.c:72
 #, c-format
@@ -3659,8 +3659,8 @@ msgid ""
 "\n"
 msgstr ""
 "Befehle:\n"
-"  --check-supported             Überprüfen, ob das laufende dpkg\n"
-"                                  Trigger unterstützt.\n"
+"  --check-supported                Überprüfen, ob das laufende dpkg\n"
+"                                     Trigger unterstützt.\n"
 "\n"
 
 #: src/trigcmd.c:105
@@ -3677,13 +3677,13 @@ msgid ""
 "\n"
 msgstr ""
 "Optionen:\n"
-"  --admindir=<Verzeichnis>      <Verzeichnis> statt %s verwenden.\n"
-"  --by-package=<Paket>          Überstimmen, welches Paket auf Trigger "
-"wartet\n"
-"                                  (normalerweise von dpkg gesetzt).\n"
-"  --no-await                    Kein Paket muss auf die Verarbeitung "
+"  --admindir=<Verzeichnis>         <Verzeichnis> statt %s verwenden.\n"
+"  --by-package=<Paket>             Überstimmen, welches Paket auf Trigger\n"
+"                                     wartet (normalerweise von dpkg "
+"gesetzt).\n"
+"  --no-await                       Kein Paket muss auf die Verarbeitung "
 "warten.\n"
-"  --no-act                      Nur testen - nichts tatsächlich ändern.\n"
+"  --no-act                         Nur testen - nichts tatsächlich ändern.\n"
 "\n"
 
 #: src/trigcmd.c:162
