--- a/po/dpkg.pot
+++ b/po/dpkg.pot
@@ -3206,7 +3206,7 @@ msgid "--clear-selections does not take any argument"
 msgstr ""
 
 #: src/trigcmd.c:67
-msgid "Type dpkg-triggers --help for help about this utility."
+msgid "Type dpkg-trigger --help for help about this utility."
 msgstr ""
 
 #: src/trigcmd.c:72
