--- a/po/dz.po
+++ b/po/dz.po
@@ -3565,7 +3565,7 @@ msgstr "--བསལ་-སེལ་འཐུ་གིས་སྒྲུབ་ར
 
 #: src/trigcmd.c:67
 #, fuzzy
-msgid "Type dpkg-triggers --help for help about this utility."
+msgid "Type dpkg-trigger --help for help about this utility."
 msgstr "དབྱེ་བ་ ཌི་པི་ཀེ་ཇི་-བཤག་ --གྲོགས་རམ་གྱི་དོན་ལུ་གྲོགས་རམ།"
 
 #: src/trigcmd.c:72
