--- a/po/el.po
+++ b/po/el.po
@@ -3568,7 +3568,7 @@ msgstr "η --set-selections δεν παίρνει κανένα όρισμα"
 
 #: src/trigcmd.c:67
 #, fuzzy
-msgid "Type dpkg-triggers --help for help about this utility."
+msgid "Type dpkg-trigger --help for help about this utility."
 msgstr "Δώστε dpkg-split --help για βοήθεια."
 
 #: src/trigcmd.c:72
