--- a/po/es.po
+++ b/po/es.po
@@ -3726,7 +3726,7 @@ msgstr "--clear-selections no lleva parámetros"
 
 #: src/trigcmd.c:67
 #, fuzzy
-msgid "Type dpkg-triggers --help for help about this utility."
+msgid "Type dpkg-trigger --help for help about this utility."
 msgstr "Escriba dpkg-split --help para obtener ayuda."
 
 #: src/trigcmd.c:72
