--- a/po/et.po
+++ b/po/et.po
@@ -3330,7 +3330,7 @@ msgstr "--clear-selections ei vaja ühtegi argumenti"
 
 #: src/trigcmd.c:67
 #, fuzzy
-msgid "Type dpkg-triggers --help for help about this utility."
+msgid "Type dpkg-trigger --help for help about this utility."
 msgstr "Abiteabe jaoks sisesta dpkg-split --help."
 
 #: src/trigcmd.c:72
