--- a/po/fr.po
+++ b/po/fr.po
@@ -3771,7 +3771,7 @@ msgstr "--clear-selections ne prend aucun paramètre"
 
 #: src/trigcmd.c:67
 #, fuzzy
-msgid "Type dpkg-triggers --help for help about this utility."
+msgid "Type dpkg-trigger --help for help about this utility."
 msgstr "Taper dpkg-split --help pour obtenir de l'aide."
 
 #: src/trigcmd.c:72
