--- a/po/gl.po
+++ b/po/gl.po
@@ -3632,7 +3632,7 @@ msgstr "--clear-selections non toma ningún argumento"
 
 #: src/trigcmd.c:67
 #, fuzzy
-msgid "Type dpkg-triggers --help for help about this utility."
+msgid "Type dpkg-trigger --help for help about this utility."
 msgstr "Escriba dpkg-split --help para obter axuda."
 
 #: src/trigcmd.c:72
