--- a/po/id.po
+++ b/po/id.po
@@ -3508,7 +3508,7 @@ msgstr "--set-selections tidak butuh argumen"
 
 #: src/trigcmd.c:67
 #, fuzzy
-msgid "Type dpkg-triggers --help for help about this utility."
+msgid "Type dpkg-trigger --help for help about this utility."
 msgstr "Ketik 'dpkg-split --help' untuk bantuan"
 
 #: src/trigcmd.c:72
