--- a/po/it.po
+++ b/po/it.po
@@ -3681,7 +3681,7 @@ msgstr "--clear-selections non accetta alcun parametro"
 
 #: src/trigcmd.c:67
 #, fuzzy
-msgid "Type dpkg-triggers --help for help about this utility."
+msgid "Type dpkg-trigger --help for help about this utility."
 msgstr "Esegui dpkg-split --help per un aiuto."
 
 #: src/trigcmd.c:72
