--- a/po/ja.po
+++ b/po/ja.po
@@ -3594,7 +3594,7 @@ msgstr "--clear-selections は引数をとりません"
 
 #: src/trigcmd.c:67
 #, fuzzy
-msgid "Type dpkg-triggers --help for help about this utility."
+msgid "Type dpkg-trigger --help for help about this utility."
 msgstr "ヘルプは dpkg-split --help で参照。"
 
 #: src/trigcmd.c:72
