--- a/po/nb.po
+++ b/po/nb.po
@@ -3553,7 +3553,7 @@ msgstr "--clear-selections tar ingen argumenter"
 
 #: src/trigcmd.c:67
 #, fuzzy
-msgid "Type dpkg-triggers --help for help about this utility."
+msgid "Type dpkg-trigger --help for help about this utility."
 msgstr "Skriv «dpkg-split --help» for hjelp."
 
 #: src/trigcmd.c:72
