--- a/po/nl.po
+++ b/po/nl.po
@@ -3590,7 +3590,7 @@ msgstr "--clear-selections verwacht geen argumenten"
 
 #: src/trigcmd.c:67
 #, fuzzy
-msgid "Type dpkg-triggers --help for help about this utility."
+msgid "Type dpkg-trigger --help for help about this utility."
 msgstr "Type dpkg-split --help voor hulp."
 
 #: src/trigcmd.c:72
