--- a/po/nn.po
+++ b/po/nn.po
@@ -3500,7 +3500,7 @@ msgstr "--set-selections tek ingen parametrar"
 
 #: src/trigcmd.c:67
 #, fuzzy
-msgid "Type dpkg-triggers --help for help about this utility."
+msgid "Type dpkg-trigger --help for help about this utility."
 msgstr "Skriv «dpkg-split --help» for hjelp."
 
 #: src/trigcmd.c:72
