--- a/po/pt.po
+++ b/po/pt.po
@@ -3629,7 +3629,7 @@ msgstr "--clear-selections não leva nenhum argumento"
 
 #: src/trigcmd.c:67
 #, fuzzy
-msgid "Type dpkg-triggers --help for help about this utility."
+msgid "Type dpkg-trigger --help for help about this utility."
 msgstr "Escreva dpkg-split --help para ajuda."
 
 #: src/trigcmd.c:72
