--- a/po/ro.po
+++ b/po/ro.po
@@ -3674,7 +3674,7 @@ msgstr "--clear-selections nu ia nici un argument"
 
 #: src/trigcmd.c:67
 #, fuzzy
-msgid "Type dpkg-triggers --help for help about this utility."
+msgid "Type dpkg-trigger --help for help about this utility."
 msgstr "Tastați dpkg-split --help pentru ajutor."
 
 #: src/trigcmd.c:72
