--- a/po/ru.po
+++ b/po/ru.po
@@ -3678,7 +3678,7 @@ msgstr "у действия --clear-selections нет аргументов"
 
 #: src/trigcmd.c:67
 #, fuzzy
-msgid "Type dpkg-triggers --help for help about this utility."
+msgid "Type dpkg-trigger --help for help about this utility."
 msgstr "Чтобы получить справку, введите dpkg-split --help."
 
 #: src/trigcmd.c:72
