--- a/po/sk.po
+++ b/po/sk.po
@@ -3590,7 +3590,7 @@ msgstr "--clear-selections nevyžaduje žiaden parameter"
 
 #: src/trigcmd.c:67
 #, fuzzy
-msgid "Type dpkg-triggers --help for help about this utility."
+msgid "Type dpkg-trigger --help for help about this utility."
 msgstr "Napíšte dpkg-split --help pre pomocníka."
 
 #: src/trigcmd.c:72
