--- a/po/tl.po
+++ b/po/tl.po
@@ -3574,7 +3574,7 @@ msgstr "--set-selections ay hindi tumatanggap ng argumento"
 
 #: src/trigcmd.c:67
 #, fuzzy
-msgid "Type dpkg-triggers --help for help about this utility."
+msgid "Type dpkg-trigger --help for help about this utility."
 msgstr "dpkg-split --help para sa tulong."
 
 #: src/trigcmd.c:72
