--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -3491,8 +3491,8 @@ msgid "--clear-selections does not take any argument"
 msgstr "--set-selections 不需要带任何参数"
 
 #: src/trigcmd.c:67
-msgid "Type dpkg-triggers --help for help about this utility."
-msgstr "输入 dpkg-triggers --help 以获取此功能的帮助信息。"
+msgid "Type dpkg-trigger --help for help about this utility."
+msgstr "输入 dpkg-trigger --help 以获取此功能的帮助信息。"
 
 #: src/trigcmd.c:72
 #, c-format
