--- a/po/zh_TW.po
+++ b/po/zh_TW.po
@@ -3482,7 +3482,7 @@ msgstr "--set-selections 不需要任何參數"
 
 #: src/trigcmd.c:67
 #, fuzzy
-msgid "Type dpkg-triggers --help for help about this utility."
+msgid "Type dpkg-trigger --help for help about this utility."
 msgstr "輸入 dpkg-split --help 就可以閱讀幫助訊息。"
 
 #: src/trigcmd.c:72
