--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,9 @@
+2008-04-10  Sven Joachim  <svenjoac@gmx.de>
+
+	* dpkg.pot: Regenerated.
+	* *.po: Merged with dpkg.pot.
+	* de.po: Fix alignment of 'dpkg-trigger --help'.
+
 2008-04-09  Sven Joachim  <svenjoac@gmx.de>
 
 	* de.po: Updated to 984t.
