--- a/po/pa.po
+++ b/po/pa.po
@@ -3345,7 +3345,7 @@ msgid "--clear-selections does not take any argument"
 msgstr ""
 
 #: src/trigcmd.c:67
-msgid "Type dpkg-triggers --help for help about this utility."
+msgid "Type dpkg-trigger --help for help about this utility."
 msgstr ""
 
 #: src/trigcmd.c:72
