--- a/scripts/po/de.po
+++ b/scripts/po/de.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: dpkg scripts\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2008-04-08 07:01+0300\n"
-"PO-Revision-Date: 2008-04-03 22:34+0200\n"
+"PO-Revision-Date: 2008-04-11 18:10+0200\n"
 "Last-Translator: Helge Kreutzmann <debian@helgefjell.de>\n"
 "Language-Team: de <debian-l10n-german@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -1402,7 +1402,7 @@ msgid ""
 "dependency on %s could be avoided if \"%s\" were not uselessly linked "
 "against it (they use none of its symbols)."
 msgstr ""
-"Abhängigkeit auf %s könnte vermieden werden, falls »%s« nicht unnötigerweise "
+"Abhängigkeit von %s könnte vermieden werden, falls »%s« nicht unnötigerweise "
 "dagegen gelinkt wäre (sie verwenden keine seiner Symbole)."
 
 #: scripts/dpkg-shlibdeps.pl:368
