--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-04-11  Jacobo Tarrio  <jtarrio@debian.org>
+
+	* gl.po: Updated to 984t.
+
 2008-04-10  Sven Joachim  <svenjoac@gmx.de>
 
 	* dpkg.pot: Regenerated.
