--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008-04-12  Sven Joachim  <svenjoac@gmx.de>
+
+	* scripts/Dpkg/Source/Package.pm: Add missing import of
+	subprocerr.
+
 2008-04-08  Guillem Jover  <guillem@debian.org>
 
 	* configure.ac: Release 1.14.18.
