Fix a double-free by setting scontext to NULL after calling freecon
Based on a patch by Russell Coker. Closes: #474339

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008-04-12  Russell Coker <russell@coker.com.au>,
+            Guillem Jover  <guillem@debian.org>
+
+	* src/archives.c (tarobject): Set scontext to NULL after freecon.
+
 2008-04-10  Sven Joachim  <svenjoac@gmx.de>
 
 	* src/trigcmd.c: Fix typo.
