--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,9 @@
 dpkg (1.14.19) UNRELEASED; urgency=low
 
+  [ Guillem Jover ]
+  * Fix a double-free by setting scontext to NULL after calling freecon.
+    Based on a patch by Russell Coker. Closes: #474339
+
   [ Updated dpkg translations ]
   * Galician (Jacobo Tarrio).
   * German (Sven Joachim).
