Fixed fuzzy string in Galician translation.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-04-13  Jacobo Tarrio  <jtarrio@debian.org>
+
+	* gl.po: Really updated to 984t (had 1 fuzzy string).
+
 2008-04-11  Jacobo Tarrio  <jtarrio@debian.org>
 
 	* gl.po: Updated to 984t.
