--- a/po/gl.po
+++ b/po/gl.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: dpkg\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2008-04-01 07:21+0300\n"
-"PO-Revision-Date: 2008-04-11 22:38+0100\n"
+"PO-Revision-Date: 2008-04-13 12:53+0100\n"
 "Last-Translator: Jacobo Tarrío <jtarrio@debian.org>\n"
 "Language-Team: Galician <proxecto@trasno.net>\n"
 "MIME-Version: 1.0\n"
@@ -3669,8 +3669,8 @@ msgid "--clear-selections does not take any argument"
 msgstr "--clear-selections non toma ningún argumento"
 
 #: src/trigcmd.c:67
-msgid "Type dpkg-triggers --help for help about this utility."
-msgstr "Escriba dpkg-triggers --help para obter axuda sobre esta utilidade."
+msgid "Type dpkg-trigger --help for help about this utility."
+msgstr "Escriba dpkg-trigger --help para obter axuda sobre esta utilidade."
 
 #: src/trigcmd.c:72
 #, c-format
