--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008-04-14  Raphael Hertzog  <hertzog@debian.org>
+
+	* scripts/Dpkg/Source/Patch.pm (_fail_not_same_type): Fix
+	inversion between new/old filetype.
+
 2008-04-12  Raphael Hertzog  <hertzog@debian.org>
 
 	* scripts/Dpkg/Path.pm (check_files_are_the_same): Add a new
